# connect-transformations

./: .eslintrc.yaml  .flake8  .gitignore  CHANGELOG.md  Dockerfile  HOWTO.md  README.md  connect-deployment.yml  docker-compose.yml  jest.config.js  overview.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: test.yml
connect_transformations/: constants.py  exceptions.py  extension.json  handlers.py  models.py  transformations.py  utils.py  webapp.py
connect_transformations/airtable_lookup/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/attachment_lookup/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/copy_columns/: mixins.py  models.py  utils.py
connect_transformations/currency_conversion/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/filter_row/: mixins.py  models.py  utils.py
connect_transformations/formula/: mixins.py  models.py  utils.py
connect_transformations/lookup_billing_request/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/lookup_ff_request/: exceptions.py  mixins.py  utils.py
connect_transformations/lookup_product_items/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/lookup_subscription/: exceptions.py  mixins.py  models.py  utils.py
connect_transformations/manual_transformation/: mixins.py
connect_transformations/split_column/: mixins.py  models.py  utils.py
connect_transformations/static/: index.css  vendors.1c7b7a3cfa48881c1cd6.js  vendors.65cbf3fa909b742b244e.js  vendors.833a36e6b7474c023071.js  vendors.a42c367a82fe7138faf6.js  vendors.b7829ba6a3fa12b6e5cb.js  vendors.eacc36d61c4b88b16c8b.js
connect_transformations/vat_rate/: exceptions.py  mixins.py  models.py  utils.py
tests/: conftest.py  test_transformations.py  test_webapp.py
tests/test_data/: input_file_example.xlsx
tests/transformations/: test_airtable_lookup.py  test_attachment_lookup.py  test_copy_columns.py  test_formula.py  (+10 more)
(+437 files in other folders)
